--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-benchmarks",
   "version": "1.0.0",
   "description": "",
-  "main": "text-decoder.js",
   "scripts": {
     "text-decoder": "~/Developer/node/out/Release/node ./text-decoder/index.mjs && bun run ./text-decoder/index.mjs && deno run -A ./text-decoder/deno.js",
+    "text-encoder": "~/Developer/node/out/Release/node ./text-encoder/index.mjs && bun run ./text-encoder/index.mjs && deno run -A ./text-encoder/deno.js",
     "string-decoder": "~/Developer/node/out/Release/node ./string-decoder/index.mjs && bun run ./string-decoder/index.mjs && deno run -A ./string-decoder/deno.js"
   },
   "keywords": [],
